# Skymake

./: .gitignore  CMakeLists.txt  Figurines.h  Makefile  Printer.h  README.md  Skylanders.h  Skymake.spec  skylanders.h  skymake  skymake-ui.h  skymake.cpp  skymake.desktop  skymake.h  skymake.pro  skymake.ui
Skylanders List/: Sk.index.html
